--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,12 @@ body {
 p{
   font-family: helvetica, sans-serif;
 }
+div{
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
 .header{
   color: #4f4733;
   font-size: 40;
