--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,10 @@ td.ts:hover{
 .leftcol {
     float: left;
     width: 20%;
-    transform: scale(1.5);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+    .leftcol :hover img {
+        transform: scale(1.5);
+    }
 .midcol{
   width: 60%;
   float: left;
